--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,20 +3,16 @@
 	<head>
   	<title><%= full_title(yield(:title)) %></title>
   	<%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
-  	<%= javascript_include_tag	'application', 'data-turbolinks-track' => true %>
+  	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   	<%= csrf_meta_tags %>
-  	<!--[if lt IE 9]>
-      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
-      </script>
-    <![endif]-->
   	<%= render 'layouts/shim' %>
 	</head>
 	<body>
 		<%= render 'layouts/header' %>
 		<div class="container">
-			<%= flash.each do |message_type, message| %>
+			<% flash.each do |message_type, message| %>
 				<%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
-			<%= end %>
+			<% end %>
 			<%= yield %>
 			<%= render 'layouts/footer' %>
 			<%= debug(params) if Rails.env.development? %>
